:basketball: improving scoring board design

--- a/src/App.css
+++ b/src/App.css
@@ -22,3 +22,117 @@ html {
         transform: rotate(360deg);
     }
 }
+
+.full-h {
+    height: 100vh; /* For 100% screen height */
+}
+
+.btn-start {
+    font-size: 90px;
+    padding: 10px 40px 10px 40px;
+}
+
+.score {
+    font-size: 200px;
+    line-height: 200px;
+}
+
+.time {
+    font-size: 100px;
+    line-height: 100px;
+}
+
+@font-face {
+    font-family: 'Digitialism';
+    font-style: normal;
+    font-weight: 400;
+    src: local('Open Sans'), local('OpenSans'),
+    url('./digitalism.ttf') format('truetype');
+}
+
+.digitialism {
+    color: red;
+    font-family: 'Digitialism', serif;
+    /*text-shadow: 5px 5px 0 gray,*/
+    /*1px -1px 0 gray,*/
+    /*-1px 1px 0 gray,*/
+    /*1px 1px 0 gray;*/
+}
+
+.digit-number-front {
+    z-index: 10;
+    position: relative;
+    float: left;
+    right: -233px;
+    top: -201px;
+}
+
+.digit-number-bgd {
+    z-index: 9;
+    color: #353535;
+    position: relative;
+    float: left;
+    right: -151px;
+    top: 5px;
+}
+
+.digit-pts-bgd {
+    z-index: 8;
+    color: #353535;
+    position: relative;
+    float: left;
+    right: -205px;
+    top: 5px;
+}
+
+.clock-border {
+    border: 5px solid grey;
+    border-radius: 1%;
+    box-shadow: 0 8px 0 #5f5f5f,
+    0 0 0 #5f5f5f,
+    0 0 0 #5f5f5f,
+    0 0 0 #5f5f5f;
+}
+
+.btn-3d {
+    position: relative;
+    outline: none;
+    display: inline-block;
+    font-size: 80px;
+    font-weight: 100;
+    padding: 20px 60px;
+    color: white;
+    margin: 20px 10px 10px;
+    border-radius: 6px;
+    text-align: center;
+    transition: top .01s linear;
+    text-shadow: 0 2px 0 rgba(0, 0, 0, 0.15);
+}
+
+.btn-3d.green:hover {
+    background-color: #1f8a20;
+}
+
+.btn-3d:active {
+    top: 9px;
+}
+
+.btn-3d.green {
+    background-color: #21c816;
+    box-shadow: 0 0 0 1px #82c8a0 inset,
+    0 0 0 2px rgba(255, 255, 255, 0.15) inset,
+    0 8px 0 0 rgba(65, 194, 86, 0.7),
+    0 8px 0 1px rgba(0, 0, 0, .4),
+    0 8px 8px 1px rgba(0, 0, 0, 0.5);
+}
+
+.btn-3d.green:active {
+    box-shadow: 0 0 0 1px #82c8a0 inset,
+    0 0 0 2px rgba(255, 255, 255, 0.15) inset,
+    0 0 0 1px rgba(0, 0, 0, 0.4);
+}
+
+.clock-size {
+    width: 850px;
+    height: 375px;
+}
